Ajout des nouvelles fonctionnalités / corrections

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Centre de Formation</title>
+  <title>Cabinet Coaching & Consulting</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="style.css" rel="stylesheet">
 </head>
@@ -18,26 +18,28 @@
 
   <!-- Liens poussés à droite -->
   <div class="ml-auto flex space-x-6 text-sm md:text-base font-semibold">
-    <a href="#accueil" class="text-[#214980] hover:underline">Accueil</a>
-    <a href="#formations" class="text-[#214980] hover:underline">Formations</a>
+    <a href="index.html" class="text-[#214980] hover:underline">Accueil</a>
+    <a href="index.html" class="text-[#214980] hover:underline">Formations</a>
     <a href="#contact" class="text-[#214980] hover:underline">Contact</a>
   </div>
 </nav>
 
 <br><br>
 
-<section class="w-full bg-[#214980] text-white py-17 px-6 md:px-16 text-center rounded-xl max-w-7xl mx-auto relative overflow-hidden">
+<section class="w-full bg-[#082aaa] text-white py-17 px-6 md:px-16 text-center rounded-xl max-w-7xl mx-auto relative overflow-hidden">
   <br><br>
  
   <!-- Ligne 1 -->
   <h1 class="text-4xl md:text-6xl font-extrabold leading-tight">
-    <span class="inline-block bg-blue-600 text-white px-4 py-1 rounded-3xl">Formez-vous</span>
+   <span class="inline-block bg-black text-white px-4 py-1 rounded-3xl">Formez-vous</span>
+
     <span class="text-white">au QA.</span>
   </h1>
 
   <!-- Ligne 2 -->
   <h2 class="text-4xl md:text-6xl font-extrabold leading-tight mt-4">
-    <span class="inline-block bg-green-500 text-white px-4 py-1 rounded-2xl">Accélérez</span>
+<span class="inline-block bg-[#08aa18] text-white px-4 py-1 rounded-2xl">Accélérez</span>
+
     <span class="text-white">votre carrière</span>
   </h2>
 
@@ -90,23 +92,31 @@
 
 
 
-    <!-- Test Manager -->
-    <div class="bg-white border border-[#b5b3c0] rounded-2xl shadow-xl transform transition-transform hover:-translate-y-2">
-      <img src="https://via.placeholder.com/400x200?text=Test+Manager" alt="Test Manager" class="w-full h-48 object-cover" />
-      <div class="p-6">
-        <h3 class="text-xl font-semibold text-[#214980] mb-2 hover:underline transition">Test Manager</h3>
-        <p class="text-[#333] text-sm opacity-70 hover:opacity-100 transition">Devenez responsable qualité : gérez des projets de test, des équipes QA, et utilisez des outils comme JIRA, TestRail.</p>
-        <p class="text-[#b5b3c0] italic mt-2">Durée : 1.5 mois</p>
-      </div>
-    </div>
+   <div class="bg-white border border-[#b5b3c0] rounded-2xl shadow-xl transform transition-transform hover:-translate-y-2">
+  <!-- Image avec animation au survol -->
+  <img src="testeur-automatique.jpg" alt="Testing Manuel & Automatique" class="w-250 h-40 object-cover rounded-full mx-auto mt-4 mb-6 transition-transform duration-300 ease-in-out transform hover:scale-110" />
+  <div class="p-6">
+  <!-- Titre reformulé -->
+  <h3 class="text-xl font-semibold text-[#214980] mb-2 hover:underline transition">Devenez Testeur de Logiciels Certifié ISTQB</h3>
+  <!-- Paragraphe reformulé -->
+  <p class="text-[#333] text-sm opacity-70 hover:opacity-100 transition">Obtenez votre certification ISTQB grâce à notre formation complète et pratique en test logiciel.</p>
+  <!-- Bouton "En savoir plus" -->
+  <div class="mt-6 flex justify-center">
+
+    <a href="selenuim.html" class="bg-[#214980] text-white font-semibold px-6 py-3 rounded-full shadow-md hover:scale-105 transition-transform duration-300">
+      En savoir plus
+    </a>
+  </div>
+  </div>
+</div>
 
     <!-- QA Express -->
     <div class="bg-white border border-[#b5b3c0] rounded-2xl shadow-xl transform transition-transform hover:-translate-y-2">
       <img src="https://via.placeholder.com/400x200?text=QA+Express" alt="Hot Formation en QA" class="w-full h-48 object-cover" />
       <div class="p-6">
-        <h3 class="text-xl font-semibold text-[#214980] mb-2 hover:underline transition">Hot Formation en QA</h3>
+        <h3 class="text-xl font-semibold text-[#214980] mb-2 hover:underline transition">Test Manager</h3>
         <p class="text-[#333] text-sm opacity-70 hover:opacity-100 transition">Session accélérée pour acquérir les bases du testing logiciel en un temps réduit, idéale pour reconversion rapide.</p>
-        <p class="text-[#b5b3c0] italic mt-2">Durée : 3 semaines</p>
+     
       </div>
     </div>
 
