--- a/page_ISTQB.html
+++ b/page_ISTQB.html
@@ -39,36 +39,70 @@
 
       <!-- Logo -->
       <div class="flex items-center">
-        <img src="logo.png" class="h-20 w-auto" />
+        <img src="logo.png" class="h-24 md:h-32 w-auto" />
       </div>
 
-      <!-- Bouton Hamburger (visible sur mobile) -->
-      <button id="menu-btn" class="md:hidden text-[#214980] focus:outline-none">
-        <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="M4 6h16M4 12h16M4 18h16" />
-        </svg>
-      </button>
-
-      <!-- Menu principal -->
-      <nav id="menu" class="hidden md:flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-6 text-sm font-semibold text-[#214980]">
+      <!-- Menu desktop -->
+      <nav class="hidden md:flex space-x-6 text-sm font-semibold text-[#214980]">
         <a href="index.html" class="hover:text-teal-500">ACCEUIL</a>
-        <a href="index.html" class="hover:text-teal-500">QUI SOMMES-NOUS</a>
-        <a href="index.html" class="hover:text-teal-500">FORMATIONS</a>
+        <a href="#a-propos" class="hover:text-teal-500">QUI SOMMES-NOUS</a>
+        <a href="#formations" class="hover:text-teal-500">FORMATIONS</a>
         <a href="#" class="hover:text-teal-500">CALENDRIER</a>
       </nav>
 
+      <!-- Menu mobile button -->
+      <button id="menuBtn" class="md:hidden text-3xl text-[#214980] focus:outline-none">
+        &#9776;
+      </button>
     </div>
   </div>
+
+  <!-- Mobile menu -->
+  <div id="mobileMenu" class="hidden md:hidden fixed inset-0 bg-white z-50 p-6">
+    <div class="flex justify-end">
+      <button id="closeMenu" class="text-3xl text-[#214980]">&times;</button>
+    </div>
+    <nav class="mt-6 space-y-4 text-[#214980] font-medium text-lg">
+      <a href="index.html" class="block">ACCEUIL</a>
+      <a href="index.html" class="block">QUI SOMMES-NOUS</a>
+      <a href="index.html" class="block">FORMATIONS</a>
+      <a href="#" class="block">CALENDRIER</a>
+    </nav>
+  </div>
 </header>
+
+<!-- Sticky navbar shadow on scroll -->
+<style>
+  .sticky-shadow {
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.07);
+    background-color: white;
+  }
+</style>
+
+<!-- JS pour menu mobile -->
 <script>
-  const menuBtn = document.getElementById("menu-btn");
-  const menu = document.getElementById("menu");
+  const navbar = document.getElementById("navbar");
+  const menuBtn = document.getElementById("menuBtn");
+  const mobileMenu = document.getElementById("mobileMenu");
+  const closeMenu = document.getElementById("closeMenu");
+
+  window.addEventListener("scroll", () => {
+    if (window.scrollY > 10) {
+      navbar.classList.add("sticky-shadow");
+    } else {
+      navbar.classList.remove("sticky-shadow");
+    }
+  });
 
   menuBtn.addEventListener("click", () => {
-    menu.classList.toggle("hidden");
+    mobileMenu.classList.remove("hidden");
+  });
+
+  closeMenu.addEventListener("click", () => {
+    mobileMenu.classList.add("hidden");
   });
 </script>
+
 
 
 
