--- a/selenuim.html
+++ b/selenuim.html
@@ -101,8 +101,8 @@
       <!-- Menu desktop -->
       <nav class="hidden md:flex space-x-6 text-sm font-semibold text-[#214980]">
         <a href="index.html" class="hover:text-teal-500">ACCEUIL</a>
-        <a href="#a-propos" class="hover:text-teal-500">QUI SOMMES-NOUS</a>
-        <a href="#formations" class="hover:text-teal-500">FORMATIONS</a>
+        <a href="index.html" class="hover:text-teal-500">QUI SOMMES-NOUS</a>
+        <a href="index.html" class="hover:text-teal-500">FORMATIONS</a>
         <a href="#" class="hover:text-teal-500">CALENDRIER</a>
       </nav>
 
@@ -314,8 +314,8 @@
     <div class="flex flex-col items-center md:items-start">
       <h4 class="font-semibold mb-4">Contact</h4>
       <ul class="space-y-3 text-sm text-[#1F2D3D] max-w-xs">
-        <li><i class="fas fa-phone-alt mr-2 text-[#214980]"></i> (216) 23 580 745</li>
-        <li><i class="fas fa-mobile-alt mr-2 text-[#214980]"></i> (216) 70 621 226</li>
+        <li><i class="fas fa-phone-alt mr-2 text-[#214980]"></i> (+216) 23 580 745</li>
+        <li><i class="fas fa-mobile-alt mr-2 text-[#214980]"></i> (+216) 70 621 226</li>
         <li><i class="fas fa-map-marker-alt mr-2 text-[#214980]"></i> Avenue Hedi Nouira, Résidence Yassine App AM2 à la Mezzanine, à coté de MG Ennasr2, Ariana</li>
       </ul>
     </div>
