--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
       <div id="faq2" class="max-h-0 overflow-hidden transition-all duration-500 px-6 text-gray-600">
 <p class="py-3">
   Oui, cette formation s’adresse aux professionnels expérimentés, ayant déjà une pratique en QA manuelle et/ou automatisée. <br />
-  Il est essentiel d’être <span class="font-semibold text-[#08aa18]">certifié ISTQB niveau Fondation</span> avant de suivre ce parcours.
+   <span class="font-semibold text-[#08aa18]"></span> 
 </p>
       </div>
     </div>
