--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
     <!-- Texte -->
     <div class="md:w-1/2 animate-fade-in-up transition-all duration-700 ease-in-out">
       <p class="text-gray-700 text-lg leading-relaxed mb-6">
-        G2C est un cabinet de formation et de consulting spécialisé en <span class="font-semibold text-[#082aaa]">qualité logicielle</span>. Nous vous accompagnons à chaque étape de votre carrière QA.
-      </p>
+    G2C est un cabinet de coaching, consulting et formation professionnelle, spécialisé dans les domaines de l’IT et du Management.      </p>
       <p class="text-gray-600 text-base">
         Notre équipe expérimentée vous propose un accompagnement sur mesure, certifiant et tourné vers la réussite de vos objectifs professionnels.
       </p>
