--- a/Développement Web hybdrie.html
+++ b/Développement Web hybdrie.html
@@ -128,6 +128,31 @@
     </nav>
   </div>
 </header>
+
+<script>
+  // Sélection des éléments
+  const menuBtn = document.getElementById('menuBtn');
+  const closeMenu = document.getElementById('closeMenu');
+  const mobileMenu = document.getElementById('mobileMenu');
+  const mobileDropdownBtn = document.getElementById('mobileDropdownBtn');
+  const mobileDropdown = document.getElementById('mobileDropdown');
+
+  // Ouvrir le menu mobile
+  menuBtn.addEventListener('click', () => {
+    mobileMenu.classList.remove('hidden');
+  });
+
+  // Fermer le menu mobile
+  closeMenu.addEventListener('click', () => {
+    mobileMenu.classList.add('hidden');
+  });
+
+  // Toggle dropdown mobile
+  mobileDropdownBtn.addEventListener('click', () => {
+    mobileDropdown.classList.toggle('hidden');
+  });
+</script>
+<br><br><br><br>
 <!-- Sticky navbar shadow on scroll -->
 <style>
   .sticky-shadow {
