--- a/Réseaux.html
+++ b/Réseaux.html
@@ -18,7 +18,7 @@
 
 
   <!-- Navbar -->
-<header id="navbar" class="w-full bg-white bg-opacity-90 fixed top-0 z-50 transition-all duration-300">
+<header id="navbar" class="w-full bg-white bg-opacity-90 fixed md:fixed relative top-0 z-50 transition-all duration-300">
   <div class="max-w-7xl mx-auto px-4 sm:px-8 lg:px-8">
     <div class="flex justify-between items-center h-24">
 
@@ -59,7 +59,7 @@
   </div>
 
   <!-- Mobile menu -->
-  <div id="mobileMenu" class="hidden md:hidden fixed inset-0 bg-white z-50 p-6">
+<div id="mobileMenu" class="hidden md:hidden absolute top-full left-0 w-full bg-white z-50 p-6 shadow-lg">
     <div class="flex justify-end">
       <button id="closeMenu" class="text-3xl text-[#214980]">&times;</button>
     </div>
